--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-query-devtools": "^5.51.23",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.3",
     "json-server": "1.0.0-beta.1",
@@ -20,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-intersection-observer": "^9.13.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
