--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@tanstack/react-query-devtools": "^5.51.23",
     "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.7.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "json-server": "1.0.0-beta.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-intersection-observer": "^9.13.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
